# python-template

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.root_name}}/: LICENSE.txt  README.md  pyproject.toml
{{cookiecutter.root_name}}/src/{{cookiecutter.module_name}}/: core.py
{{cookiecutter.root_name}}/tests/: test_example.py
